<?xml version="1.0"?>
<package format="2">
  <name>ros_0107</name>
  <version>0.0.0</version>
  <description>The ros_0107 package</description>

  <maintainer email="user@todo.todo">user</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
<build_depend>message_generation</build_depend>
<build_export_depend>message_generation</build_export_depend>
<exec_depend>message_runtime</exec_depend>
</package>